# turbidity_satellite_estimation

./: .gitignore  README.md  pyproject.toml
code/: 00_date_clustering.ipynb  01_data_exploration.ipynb  02_data_preprocessing.ipynb  03_satellite_imagery_processing.ipynb  04_feature_engineering.ipynb  05_dimensionality_reduction.ipynb  05_model_training.ipynb  05b_advanced_methods.ipynb  06_model_evaluation.ipynb  07_predictions_and_mapping.ipynb  data_analysis.ipynb
data/IMIDA/: CTD10_transparency.csv  CTD10_turbidity.csv  CTD11_transparency.csv  CTD11_turbidity.csv  CTD12_transparency.csv  CTD12_turbidity.csv  CTD1_transparency.csv  CTD1_turbidity.csv  CTD2_transparency.csv  CTD2_turbidity.csv  CTD3_transparency.csv  CTD3_turbidity.csv  CTD4_transparency.csv  CTD4_turbidity.csv  CTD5_transparency.csv  CTD5_turbidity.csv  CTD6_transparency.csv  CTD6_turbidity.csv  CTD7_transparency.csv  CTD7_turbidity.csv  CTD8_transparency.csv  CTD8_turbidity.csv  CTD9_transparency.csv  CTD9_turbidity.csv
data/datasets/: UPCT_turbidity_surface.csv  turbidity_ctd_satellite.csv
geospatial/: MarMenor.qgz  ctd_points.geojson  ctd_points_out5.geojson  marmenor.geojson  marmenor_polygon.geojson  marmenor_polygon_epsg.geojson
results/: analysis_candidate_groups.csv  analysis_profiles_with_clusters.csv  best_model_info.json  dataset_config.json  grid_turbidity_predictions.csv  model_metrics.csv  oof_predictions.csv  test_predictions.csv  turbidity_raster_2024-07-03_CatBoost.tif  turbidity_raster_2024-07-03_CatBoost_nearest.tif  turbidity_raster_2024-07-03_GBR.tif
