[project]
name = "turbidity-satellite-estimation"
version = "0.1.0"
description = "Surface turbidity estimation in the Mar Menor lagoon from Planet SuperDove imagery and CTD in-situ profiles"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # --- core data ---
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "pyarrow>=14.0",        # parquet engine used by pandas (to_parquet / read_parquet)

    # --- machine learning ---
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.4",
    "umap-learn>=0.5.5",    # imported as `umap`
    "torch>=2.1",           # autoencoder (CPU wheels by default — see note below for CUDA)

    # --- geospatial ---
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",

    # --- visualisation ---
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # --- utilities ---
    "tqdm>=4.66",

    # --- notebook runtime ---
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

# ---------------------------------------------------------------------------
# OPTIONAL: GPU build of PyTorch.
# By default the CPU wheels from PyPI are installed (works everywhere).
# To use CUDA 12.1 wheels instead, UNCOMMENT the four lines below and
# re-run `uv sync`.
# ---------------------------------------------------------------------------
# [tool.uv.sources]
# torch = { index = "pytorch-cu121" }
#
# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true
